Different types of string

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,6 @@
     <title>Studying_JS</title>
 </head>
 <body>
-    <script src = "./assets/index.js"> </script>
+    <script src = "index.js"> </script>
 </body>
 </html>
